@@ -195,3 +195,4 @@ EDITSUBJECTAREA.text=\u0053\u0075\u0062\u006a\u0065\u0063\u0074\u0020\u0041\u007
 SQL.text=\u0053\u0051\u004c
 EXPANDALL.text=\u0041\u006c\u006c\u0065\u0073\u0020\u0065\u0078\u0070\u0061\u006e\u0064\u0069\u0065\u0072\u0065\u006e
 COLLAPSEALL.text=\u0041\u006c\u006c\u0065\u0073\u0020\u007a\u0075\u0073\u0061\u006d\u006d\u0065\u006e\u006b\u006c\u0061\u0070\u0070\u0065\u006e
+GRIDSIZEAFTERREVERSEENGINEERING.text=\u0047\u0069\u0074\u0074\u0065\u0072\u0067\u0072\u00f6\u0073\u0073\u0065\u0020\u006e\u0061\u0063\u0068\u0020\u0052\u0065\u0076\u0065\u0072\u0073\u0065\u0020\u0045\u006e\u0067\u0069\u006e\u0065\u0065\u0072\u0069\u006e\u0067
